# CornerDetection

./: .gitignore  CMakeLists.txt
src/: main.cpp
